feat: add the mill game

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+#---
+
+# Remove all downloadable content
+Content/*/
+!Content/TheMillGame
