feat: start configuration for android

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,3 +42,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=fr.lvlll.themillgame
+bPackageDataInsideApk=True
+
