--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TheMillGame/Map_Moulin.Map_Moulin
+GameDefaultMap=/Game/TheMillGame/Maps/Map_StartMenu/Map_StartMenu.Map_StartMenu
 
 
-EditorStartupMap=/Game/TheMillGame/Map_Moulin.Map_Moulin
+EditorStartupMap=/Game/TheMillGame/Maps/Map_Game/Map_Moulin.Map_Moulin
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
