feat: add a game instance to share player infos between the 2 maps

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/TheMillGame/Maps/Map_StartMenu/Map_StartMenu.Map_StartMenu
 
 
 EditorStartupMap=/Game/TheMillGame/Maps/Map_Game/Map_Moulin.Map_Moulin
+GameInstanceClass=/Game/TheMillGame/GI_TheMillGame.GI_TheMillGame_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
