chore: rename "board" map to "board basic" map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/TheMillGame/Maps/Map_StartMenu.Map_StartMenu
 
 
-EditorStartupMap=/Game/TheMillGame/Maps/Map_Board.Map_Board
+EditorStartupMap=/Game/TheMillGame/Maps/Map_Board_Basic.Map_Board_Basic
 GameInstanceClass=/Game/TheMillGame/GI_TheMillGame.GI_TheMillGame_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
